Add sprint security with oauth2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,45 @@
 spring.application.name=UrlShortener
+spring.profiles.active=@profileActive@
+
+
+# Configuracion de la base de datos para PostgreSQL
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# configuracion de jpa
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.jpa.database=postgresql
+
+# OAUTH2 GOOGLE
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+#Datos a obtener del usuario
+spring.security.oauth2.client.registration.google.scope=email,profile
+#Url a donde reedirige despues de autenticar
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.google.client-name=Google
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+#alternativa https://openidconnect.googleapis.com/v1/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+#OAUTH2 REDIRECTS AUTORIZADOS
+# ===============================
+app.oauth2.authorized-redirect-uris=http://localhost:4200/oauth2/redirect
+#esto es adicionarl https://tudominio.com/oauth2/redirect
+
+# FRONTEND
+# ===============================
+app.frontend.url=http://localhost:4200
+
+# JWT
+app.jwt.secret=${JWT_SECRET}
+app.jwt.expiration-minutes=${JWT_EXPIRATION_MINUTES}
+
